# TiendaDev2

./: README.md
backend-fastapi/: .gitignore  main.py  pyproject.toml  requirements.txt
backend-fastapi/app/: admin.py  auth.py  cart.py  database.py  main.py  mi_cuenta.py  model.py  order.py  product.py  schemas.py
backend-fastapi/app/core/: config.py  database.py
backend-fastapi/app/models/: user.py
backend-fastapi/app/routers/: admin.py  auth.py  cart.py  mi_cuenta.py  user.py
backend-fastapi/app/schemas/: base.py  cart.py  order.py  product.py  user.py
backend-fastapi/app/services/: user_service.py
frontend-vue/tienda/: babel.config.js  package-lock.json  package.json
frontend-vue/tienda/public/: index.html
frontend-vue/tienda/src/: .eslintrc.js  App.vue  axios.js  main.js
frontend-vue/tienda/src/components/: About.vue  Banersito.vue  Banner.vue  Carrusel.vue  DropMenu.vue  Footer.vue  Imagenban.vue  Navbar.vue  ProductosCards.vue  Tarjetas.vue
frontend-vue/tienda/src/plugins/: vuetify.js  webfontloader.js
frontend-vue/tienda/src/router/: index.js
frontend-vue/tienda/src/stores/: productManagerStore.js  useCartStore.js  useProductCreateStore.js  useProductStore.js
frontend-vue/tienda/src/views/: Cart.vue  Checkout.vue  CreateProduct.vue  HomePage.vue  Login.vue  MisProductos.vue  MyAccount.vue  ProductList.vue  Register.vue
