[tool.poetry]
name = "backend-fastapi"
version = "0.1.0"
description = ""
authors = ["Rodrigo Maximiliano <maxilcksly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyjwt = "^2.9.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = "^2.9.2"
motor = "^3.6.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
